--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "db-migrate": "0.11.10",
     "db-migrate-pg": "1.0.0",
     "express": "4.17.1",
+    "express-graphql": "^0.11.0",
+    "graphql": "^15.3.0",
     "morgan": "1.10.0",
     "pg": "8.0.0"
   }
