--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@types/morgan": "1.9.0",
     "@types/pg": "7.14.1",
     "@types/sinon": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
     "chai": "4.2.0",
+    "eslint": "7.11.0",
     "mocha": "7.1.1",
     "nodemon": "2.0.3",
     "sinon": "9.0.2",
