--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@wopa/web-server",
-  "version": "0.4.0",
-  "description": "wopa backend server",
+  "name": "typescript-microservice-boilerplate",
+  "version": "0.0.0",
+  "description": "Typescript boilerplate to bootstrap microservices",
   "author": "Joao Gloria <jhfgloria@gmail.com>",
   "scripts": {
     "test": "mocha -r ts-node/register './{,!(node_modules)/**/}*.test.ts'",
@@ -40,9 +40,9 @@
     "db-migrate": "0.11.10",
     "db-migrate-pg": "1.0.0",
     "express": "4.17.1",
-    "express-graphql": "^0.11.0",
-    "graphql": "^15.3.0",
-    "module-alias": "^2.2.2",
+    "express-graphql": "0.11.0",
+    "graphql": "15.3.0",
+    "module-alias": "2.2.2",
     "morgan": "1.10.0",
     "pg": "8.0.0"
   }
